<resources>
    <string name="app_name">TuanChe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pinpaixuanche">品牌选车</string>
    <string name="tiaojianxuanche">条件选车</string>
    <string name="citychoice">当前城市-%s</string>
    <string name="login_num">已有%s人报名</string>
    <string name="guide_price" formatted="false">指导价:%s-%s万</string>
    <string name="loading">正在加载中...</string>
    <string name="loadingerr">加载失败</string>
    <string name="level">级别</string>
    <string name="series">国别</string>
    <string name="bos">排量</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="update_version_num">V%s</string>

    <!--下拉刷新上拉加载更多通用-->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_activity_scan_history">ScanHistoryActivity</string>
    <string name="fastlogin">快速登陆</string>

</resources>
